--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "master-enumerator",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Allows users to harness psuedo-enumerator data types",
-  "main": "./index.js",
+  "main": "dist",
   "scripts": {
     "clean": "rimraf dist",
     "test": "npm run lint && npm run cover",
@@ -13,10 +13,10 @@
     "prepublish": "npm run clean && npm run lint && npm run test && npm run build"
   },
   "files": [
-    "dist/index.js",
-    "dist/LICENSE",
-    "dist/package.json",
-    "dist/README.md"
+    "index.js",
+    "LICENSE",
+    "package.json",
+    "dREADME.md"
   ],
   "repository": {
     "type": "git",
