--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "master-enumerator",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Allows users to harness psuedo-enumerator data types",
-  "main": "dist",
+  "main": "./dist/index.js",
   "scripts": {
     "clean": "rimraf dist",
     "test": "npm run lint && npm run cover",
@@ -13,10 +13,7 @@
     "prepublish": "npm run clean && npm run lint && npm run test && npm run build"
   },
   "files": [
-    "index.js",
-    "LICENSE",
-    "package.json",
-    "dREADME.md"
+    "dist"
   ],
   "repository": {
     "type": "git",
